# ES

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dados_abcd_TEST.txt  Dados_abcd_TRAIN.txt  ES  ESAlgorithm.cpp  ESAlgorithm.h  Individual.cpp  Individual.h  Makefile  README.md  abcd_all_experiments.sh  all_experiments.sh  all_experiments2.sh  all_experiments_abcd.sh  all_experiments_grn10.sh  all_experiments_grn10_test.sh  all_experiments_grn5.sh  all_experiments_grn5_test.sh  all_experiments_test.sh  all_experiments_trpEcoli.sh  batch_output.txt  batch_run.sh  best-individuals-GRN10.txt  best-individuals_LSODA.txt  cmake_install.cmake  comparison-30runs-200000it-test.csv  comparison-30runs-20000it_LSODA.csv  comparison-GRN10-30runs-200000it.csv  comparison.csv  dependencies.h  examples.sh  gmon.out  grn10_all_experiments.sh  grn4ncyc(genes_abcd)_ind.txt  grn5_all_experiments.sh  grn5ncyc_ind.txt  grn_eval.h  interpolated_train_genesABCD_data.txt  (+22 more)
abcd-1050-norm_v2/: output-abcd-cmaes.csv  output-abcd-de.csv  output-abcd-es-i.csv  output-abcd-es-ni.csv  output-abcd-sade.csv  progress-abcd-cmaes.csv  progress-abcd-es-ni.csv  progress-abcd-sade.csv
grn4ncyc-1050-interp/: output-grn4ncyc-cmaes.txt  output-grn4ncyc-de.txt  output-grn4ncyc-es-i.txt  output-grn4ncyc-es-ni.txt  output-grn4ncyc-sade.txt
grn5-10500/: output-grn5-cmaes.txt  output-grn5-de.txt
include/: Algorithm.h  ESAlgorithm.h  GRN10Model.h  GRN10NewModel.h  GRN5Model.h  GRN5NCYCModel.h  GRN5NewModel.h  GRNCoefProblem.h  GRNEDOHelpers.h  GRNSeries.h  Individual.h  ProblemDescription.h  algModes.h  appCtx.h  dependencies.h  read.h  rk4.h
liblsoda/: Make.inc
liblsoda/src/: lsoda.h
oldfiles/: GRN10Model.h  GRN10NewModel.h  GRN5NCYCModel.h  GRN5NewModel.h  GRNModel.h  grnEDOHelpers.cpp
results/: best-individuals-test.txt  best-individuals.txt  test-res-best.txt  test-res-time.csv  test-res.csv
results/exp11/: grn10-rk4-3runs-2000evals -time.csv  grn10-rk4-3runs-2000evals-best.csv  grn10-rk4-3runs-2000evals.csv
results/exp12/: grn10-lsoda-3runs-2000evals -time.csv  grn10-lsoda-3runs-2000evals-best.csv  grn10-lsoda-3runs-2000evals.csv
results/exp13/: grn10-lsoda-3runs-105000evals -time.csv  grn10-lsoda-3runs-105000evals-best.csv  grn10-lsoda-3runs-105000evals.csv  grn10-lsoda-3runs-10500evals -time.csv  grn10-lsoda-3runs-10500evals-best.csv  grn10-lsoda-3runs-10500evals.csv  grn5-rk4-3runs-105000evals -time.csv  grn5-rk4-3runs-105000evals-best.csv  grn5-rk4-3runs-105000evals.csv  grn5-rk4-3runs-10500evals -time.csv  grn5-rk4-3runs-10500evals-best.csv  grn5-rk4-3runs-10500evals.csv
results/exp14/: grn10-lsoda-30runs-200000evals -time.csv  grn10-rk4-30runs-200000evals -time.csv  grn5-lsoda-30runs-200000evals -time.csv  grn5-rk4-30runs-200000evals -time.csv  grn5-rk4-30runs-200000evals-best.csv  grn5-rk4-30runs-200000evals.csv
results/exp17/: grn5-lsoda-1runs-10500evals-train-test-best.csv  grn5-lsoda-1runs-10500evals-train-test.csv  grn5-lsoda-2runs-1050evals-train-test-best.csv  grn5-lsoda-2runs-1050evals-train-test-time.csv  grn5-lsoda-2runs-1050evals-train-test.csv  grn5-lsoda-30runs-1050000evals-train-test-time.csv
results/exp3/: grn5-lsoda-3runs-2000evals -time.csv  grn5-lsoda-3runs-2000evals-best.csv  grn5-lsoda-3runs-2000evals.csv  grn5-lsoda-3runs-200evals-best.csv  grn5-lsoda-3runs-200evals.csv  grn5-rk4-3runs-2000evals -time.csv  grn5-rk4-3runs-2000evals-best.csv  grn5-rk4-3runs-2000evals.csv  grn5-rk4-3runs-200evals-best.csv  grn5-rk4-3runs-200evals.csv
results/exp4/: grn5-lsoda-3runs-2000evals -time.csv  grn5-lsoda-3runs-2000evals-best.csv  grn5-lsoda-3runs-2000evals.csv  grn5-rk4-3runs-2000evals -time.csv  grn5-rk4-3runs-2000evals-best.csv  grn5-rk4-3runs-2000evals.csv
results/exp5/: grn5-lsoda-5runs-2000evals -time.csv  grn5-lsoda-5runs-2000evals-best.csv  grn5-lsoda-5runs-2000evals.csv  grn5-rk4-5runs-2000evals -time.csv  grn5-rk4-5runs-2000evals-best.csv  grn5-rk4-5runs-2000evals.csv
results/exp6/: grn5-lsoda-5runs-2000evals -time.csv  grn5-rk4-5runs-2000evals -time.csv
results/exp7/: grn5-lsoda-5runs-2000evals.csv  (+5 more)
src/: Algorithm.cpp  ESAlgorithm.cpp  GRNCoefProblem.cpp  GRNEDOHelpers.cpp  GRNSeries.cpp  Individual.cpp  grn_eval.c  main.cpp  read.cpp  rk4.c
tests/: test.cpp  test2.cpp  unit_tests.cpp
(+4 files in other folders)
